--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <!-- Charlie Kirk Sucks -->
     <title>Kirk Slider</title>
     <style>
       div.background{ 
