--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     var sound = document.getElementById("sound");
 
     var clip = new Howl({
-      src: ['kirk.ogg'],
+      src: ['kirk.mp3'],
       volume: 0.5
     });
 
