--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <head>
   <!-- Charlie Kirk Sucks -->
   <title>Kirk Slider</title>
+  <meta name="description" content="A slider to change the size of Charlie Kirk's face from 10% to 120%">
+  <meta name="keywords" content="Charlie Kirk,Charlie Kirk Face,TPUSA,Toilet Paper USA,I Live Like a Capitalist Every Single Day">
   <script src="howler.min.js"></script>
   <style>
     .background{ 
