Added tags back in

--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html>
-
 <head>
   <!-- Charlie Kirk Sucks -->
   <title>Kirk Slider</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="A slider to change the size of Charlie Kirk's face from 10% to 120%">
+  <meta name="keywords" content="Charlie Kirk,Charlie Kirk Face,TPUSA,Toilet Paper USA,I Live Like a Capitalist Every Single Day">
   <script src="howler.min.js"></script>
   <style>
     html {
@@ -76,7 +77,6 @@
     }
     window.addEventListener("resize", adjustFacePosition);
     adjustFacePosition();
-
 
     var clip;
 
